<resources>
    <string name="app_name">Smish Hunter</string>
    <string name="version">0.1</string>

    <string name="json_file_path">/json/reports.json</string>


    <string name="button_reports">Reports</string>
    <string name="button_check_a_link">Check a link</string>
    <string name="button_about">About</string>
    <string name="button_check_link">Check link</string>
    <string name="button_delete">Delete all reports</string>

    <string name="title_reports">Reports</string>
    <string name="title_settings">Settings</string>

    <string name="text_enter_link">Enter your link here</string>
    <string name="text_setting_1">Send notifications for malicious SMS</string>
    <string name="text_setting_2">Send notifications for suspicious SMS</string>
    <string name="text_setting_3">Add harmless messages to report list</string>

    <string name="description_settings_button">Settings</string>
    <string name="description_back_button">Back</string>
    <string name="description_danger_image">Dangerous message</string>

    <string name="level_harmless">1</string>
    <string name="level_suspicious">7</string>
    <string name="level_malicious">10</string>

    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet enim at metus accumsan aliquam. Proin eget sapien sit amet sem elementum imperdiet non in nisi. Nulla pulvinar ex id lorem rutrum ultrices. Nullam bibendum nibh ut nunc mattis convallis. Donec interdum ut erat ac accumsan. Sed imperdiet posuere commodo. Aenean sollicitudin felis et ipsum sollicitudin lacinia. Donec feugiat arcu non mi faucibus consectetur. Morbi aliquam placerat ipsum eu porta. Suspendisse faucibus sed ante eleifend consectetur. Cras eget ex sed velit aliquet pharetra. Sed nibh mi, cursus at quam a, pharetra fermentum neque. Vivamus maximus porttitor mi eget fermentum.

Nulla egestas nisi non tellus tempus ultricies ut nec ex. Nulla ac eros a velit convallis consequat. Mauris rhoncus ut mi nec luctus. Pellentesque rhoncus tincidunt justo, id lobortis dui tempus eu. Donec sed facilisis nulla. Sed nisi enim, convallis ac dignissim eget, interdum non elit. Vivamus cursus, ex in faucibus blandit, ante mauris suscipit sapien, vitae sollicitudin neque eros fermentum odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus quam elit, luctus sed sapien nec, vehicula eleifend est. Duis elit metus, iaculis eget urna a, ultrices blandit mauris. Ut cursus sit amet lacus ac vestibulum. Donec molestie lorem sit amet iaculis rutrum. Ut quis metus sodales, blandit quam ac, ultrices erat. Quisque tempor iaculis quam, ut sollicitudin elit lacinia et. Suspendisse vitae commodo ligula.

Praesent consectetur augue metus, scelerisque tincidunt libero accumsan id. Donec tortor arcu, dignissim sed congue id, feugiat vitae magna. Suspendisse egestas molestie magna pulvinar maximus. Vivamus eget volutpat ligula. Nunc eu dictum dolor. Phasellus eget lacus ligula. Maecenas placerat leo risus, non tristique ante aliquam sit amet. Morbi dapibus ligula eget arcu commodo, ut fermentum libero hendrerit. Proin aliquet arcu ac pellentesque tristique. Duis vestibulum ornare consequat.

Nam dictum elit mauris, vel sodales enim tristique varius. Quisque vitae neque vitae lacus tincidunt eleifend ac vel tellus. Donec semper in urna ut consequat. Vivamus at venenatis libero, ac convallis nisi. Duis sodales dictum justo, sit amet pharetra diam vehicula eu. Aliquam lorem ante, mollis sit amet quam at, dapibus placerat dolor. Morbi et elit ligula.

Praesent efficitur orci pharetra mauris rhoncus, id imperdiet ex gravida. In eget imperdiet orci. Morbi interdum, lorem quis ultrices volutpat, augue nisi ullamcorper augue, vel semper quam ipsum vitae quam. Donec et nibh nec risus placerat blandit. Sed tincidunt elit a nulla mattis, sit amet semper mi elementum. Duis condimentum, orci a pretium iaculis, leo odio ullamcorper arcu, ultrices elementum risus quam ac ligula. Suspendisse leo magna, sodales ut placerat ac, ornare quis neque. Nunc eleifend rhoncus finibus. Integer sed aliquet neque. Nullam fringilla nunc quis libero condimentum interdum. Aliquam sit amet gravida purus. Morbi accumsan lorem quis mauris condimentum, gravida pretium mauris auctor. Sed at ante vestibulum, sodales odio cursus, faucibus diam.</string>

</resources>