<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarReports"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#7057A139"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonBackReports"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/description_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewTitleReports"
        android:layout_width="166dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_reports"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toEndOf="@+id/buttonBackReports"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonSettingsReports"
        android:layout_width="58dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/description_settings_button"
        app:layout_constraintEnd_toEndOf="@+id/toolbarReports"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="663dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarReports">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReports"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarReports" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/button_delete"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettingsReports"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24" />


</androidx.constraintlayout.widget.ConstraintLayout>